# csrf-2024-ai-steganography

./: .gitignore  README.md  generate_data.sh  pyproject.toml
custom_stego_implement/: LSB.py  LSB_random_bit.py  PVD.py  PVD_random_bit.py  Test_create_stego.sh  Train_create_stego.sh  Val_create_stego.sh  hamming_codes.py  hamming_codes_random_bit.py  test.sh
model/: classifier_demo.py  config.py  custom_dataset.py  dataset.py  dataset_analysis.py  display_images.py  enum_utils.py  fgsm_attack.py  filetype_analysis.py  hyper_parameter_search.py  main.py  model.py  pvd_stego_analysis.py  remove_nonrgb.py  run_model_on_all_datasets.py  stego_pvd.py  test.py  test_plot_data.py  train.py
