[tool.poetry]
name = "csrf-2024-ai-steganography"
version = "0.1.0"
description = ""
authors = ["leon <leonlenk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.3.1"
torchvision = "^0.18.1"
tqdm = "^4.66.4"
matplotlib = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
