[tool.poetry]
name = "csrf-2024-ai-steganography"
version = "0.1.0"
description = ""
authors = ["leon <leonlenk@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
torch = [
    {platform = "win32", version = "^2.3.1"},
    {platform = "linux", version = "^2.3.1"},
    {platform = "darwin", url = "https://download.pytorch.org/whl/cpu/torch-2.3.1-cp312-none-macosx_11_0_arm64.whl"}
]
torchvision = "^0.18.1"
tqdm = "^4.66.4"
matplotlib = "^3.9.1"
scikit-learn = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
